<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorDark"
    tools:context=".presentation.feature.login.LoginFragment">

    <ImageView
        android:id="@+id/iv_background_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="fitXY"/>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="24dp"
        android:textSize="24sp"
        tools:text="@string/string_sign_in"
        android:fontFamily="@font/poppins_semibold"
        android:letterSpacing="0.3"
        android:textColor="@color/colorOffWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_email_input"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:layout_marginHorizontal="16dp"
        app:boxStrokeColor="@color/colorBlueGray"
        app:boxBackgroundColor="@color/colorBlueGray"
        app:helperTextEnabled="true"
        tools:helperText="@string/string_helper_email"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:hint="@string/string_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email_edit_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textColorHint="@color/colorDark"
            android:textColor="@color/colorDark"
            android:fontFamily="@font/poppins"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        android:layout_marginHorizontal="16dp"
        app:boxStrokeColor="@color/colorBlueGray"
        app:boxBackgroundColor="@color/colorBlueGray"
        app:helperTextEnabled="true"
        app:endIconMode="password_toggle"
        tools:helperText="@string/string_helper_password"
        app:layout_constraintTop_toBottomOf="@+id/et_email_input"
        app:layout_constraintStart_toStartOf="parent"
        tools:hint="@string/string_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password_edit_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:textColorHint="@color/colorDark"
            android:textColor="@color/colorDark"
            android:inputType="textPassword"
            android:fontFamily="@font/poppins"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        tools:text="@string/string_sign_in"
        android:textAllCaps="false"
        style="@style/MyButtonStyle"
        android:padding="16dp"
        android:backgroundTint="@color/colorYellow"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/londrina_solid"
        android:letterSpacing="0.3"
        app:layout_constraintTop_toBottomOf="@id/et_password_input"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="24dp"/>

    <View
        android:id="@+id/divider_view_one"
        android:layout_width="80dp"
        android:layout_height="1dp"
        android:background="@color/colorYellow"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_register"
        app:layout_constraintBottom_toBottomOf="@+id/tv_register"/>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="16sp"
        tools:text="@string/string_sign_up"
        android:fontFamily="@font/londrina_solid"
        android:letterSpacing="0.3"
        android:layout_marginVertical="16dp"
        android:textColor="@color/colorOffWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"/>

    <View
        android:id="@+id/divider_view_two"
        android:layout_width="80dp"
        android:layout_height="1dp"
        android:background="@color/colorYellow"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@+id/tv_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/tv_register"/>


</androidx.constraintlayout.widget.ConstraintLayout>